templates/its-query-web_template.yaml
---
# Source: its-query-web/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: query
  name: its-query-web
  labels:
    app: query-web
spec:
  ports:
    - port: 8088
      name: http
      protocol: TCP
      targetPort: 8088
  selector:
    app: query-web
---
# Source: its-query-web/templates/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: release-name-its-query-web
  namespace: query
  labels:
    version: v1
  annotations:
    container.apparmor.security.beta.kubernetes.io/query-web: runtime/default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: query-web
      version: v1
  template:
    metadata:
      labels:
        app: query-web
        sidecar.istio.io/inject: "true"
        version: v1
    spec:
      nodeSelector:
        feature.node.kubernetes.io/cpu-cpuid.AVX512VNNI: 'true'
        feature.node.kubernetes.io/cpu-cpuid.AVX2: 'true'
      securityContext:
        seccompProfile:
          type: RuntimeDefault
      containers:
      - name: its-query-web
        image: "query-web:ER-RC-094cf23cca445cdfd5ae63b1e2195c7eb048139e"
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8088
        resources:
          limits:
            cpu: "1"
            memory: 200Mi
          requests:
            cpu: "10m"
            memory: 100Mi
        securityContext:
          allowPrivilegeEscalation: false
---
# Source: its-query-web/templates/deployment.yaml
# INTEL CONFIDENTIAL
#
# Copyright (C) 2022 Intel Corporation.
#
# This software and the related documents are Intel copyrighted materials, and your use of
# them is governed by the express license under which they were provided to you (License).
# Unless the License provides otherwise, you may not use, modify, copy, publish, distribute,
# disclose or transmit this software or the related documents without Intel's prior written permission.
#
# This software and the related documents are provided as is, with no express or implied warranties,
# other than those that are expressly stated in the License.
---
# Source: its-query-web/templates/gateway-web.yaml
# INTEL CONFIDENTIAL
#
# Copyright (C) 2022 Intel Corporation.
#
# This software and the related documents are Intel copyrighted materials, and your use of
# them is governed by the express license under which they were provided to you (License).
# Unless the License provides otherwise, you may not use, modify, copy, publish, distribute,
# disclose or transmit this software or the related documents without Intel's prior written permission.
#
# This software and the related documents are provided as is, with no express or implied warranties,
# other than those that are expressly stated in the License.
---
# Source: its-query-web/templates/ingress.yaml
# INTEL CONFIDENTIAL
#
# Copyright (C) 2022 Intel Corporation.
#
# This software and the related documents are Intel copyrighted materials, and your use of
# them is governed by the express license under which they were provided to you (License).
# Unless the License provides otherwise, you may not use, modify, copy, publish, distribute,
# disclose or transmit this software or the related documents without Intel's prior written permission.
#
# This software and the related documents are provided as is, with no express or implied warranties,
# other than those that are expressly stated in the License.
---
# Source: its-query-web/templates/service.yaml
# INTEL CONFIDENTIAL
#
# Copyright (C) 2022 Intel Corporation.
#
# This software and the related documents are Intel copyrighted materials, and your use of
# them is governed by the express license under which they were provided to you (License).
# Unless the License provides otherwise, you may not use, modify, copy, publish, distribute,
# disclose or transmit this software or the related documents without Intel's prior written permission.
#
# This software and the related documents are provided as is, with no express or implied warranties,
# other than those that are expressly stated in the License.
---
# Source: its-query-web/templates/serviceaccount.yaml
# INTEL CONFIDENTIAL
#
# Copyright (C) 2022 Intel Corporation.
#
# This software and the related documents are Intel copyrighted materials, and your use of
# them is governed by the express license under which they were provided to you (License).
# Unless the License provides otherwise, you may not use, modify, copy, publish, distribute,
# disclose or transmit this software or the related documents without Intel's prior written permission.
#
# This software and the related documents are provided as is, with no express or implied warranties,
# other than those that are expressly stated in the License.
---
# Source: its-query-web/templates/tests/test-connection.yaml
# INTEL CONFIDENTIAL
#
# Copyright (C) 2022 Intel Corporation.
#
# This software and the related documents are Intel copyrighted materials, and your use of
# them is governed by the express license under which they were provided to you (License).
# Unless the License provides otherwise, you may not use, modify, copy, publish, distribute,
# disclose or transmit this software or the related documents without Intel's prior written permission.
#
# This software and the related documents are provided as is, with no express or implied warranties,
# other than those that are expressly stated in the License.
---
# Source: its-query-web/templates/gateway-web.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  namespace: query
  name: query-web
  annotations:
    container.apparmor.security.beta.kubernetes.io/query-web: runtime/default  
spec:
  host: its-query-web
  subsets:
  - name: v1
    labels:
      app: query-web
---
# Source: its-query-web/templates/gateway-web.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  namespace: query
  name: query-rest
  annotations:
    container.apparmor.security.beta.kubernetes.io/query-web: runtime/default
spec:
  host: its-query-rest
  subsets:
  - name: v1
    labels:
      app: query-rest
---
# Source: its-query-web/templates/gateway-web.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  namespace: query
  name: query-gateway
  annotations:
    container.apparmor.security.beta.kubernetes.io/query-web: runtime/default
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
  - port:
      number: 443
      name: https
      protocol: HTTPS
    hosts:
    - "*"
    tls:
      credentialName: hce-tls
      mode: SIMPLE
---
# Source: its-query-web/templates/gateway-web.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  namespace: query
  name: query
spec:
  hosts:
  - "*"
  gateways:
  - query-gateway
  http:
  - match:
    - uri:
        prefix: /api
    route:
    - destination:
        host: its-query-rest
        port:
          number: 8080
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: its-query-web
        port:
          number: 8088
---
# Source: its-query-web/templates/tests/test-connection.yaml
apiVersion: v1
kind: Pod
metadata:
  name: "release-name-its-query-web-test-connection"
  labels:
    helm.sh/chart: its-query-web-2.1.0
    app.kubernetes.io/name: its-query-web
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "1.16.0"
    app.kubernetes.io/managed-by: Helm
  annotations:
    "helm.sh/hook": test-success
spec:
  containers:
    - name: wget
      image: busybox
      command: ['wget']
      args: ['release-name-its-query-web:8088']
  restartPolicy: Never
